' @autogenerated
@startuml
left to right direction
title Clases para role
class access.Tenant{
uid:string
name:string
domain:string
enabled:boolean
accessToAllApplications:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.RoleDomain{
uid:string
version:integer
}
class access.Role{
uid:string
name:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.Tenant "1"  o--  "N*" access.Role: tenant
access.RoleDomain "N*"  o--  "1" access.Role: domains

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
